# ReflectionBox

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  json26.hpp  reflect
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml
examples/: json26_example.cc  json26_test.cc  json_deserializer.cc  part_1_demo.cpp  reflection_demo.cc
scripts/: cpprun  gen_compile_commands
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
