module(
    name = "p2996_reflection",
    version = "0.1",
)

bazel_dep(name = "platforms",          version = "0.0.10")
bazel_dep(name = "rules_cc",           version = "0.0.17")
bazel_dep(name = "bazel_skylib",       version = "1.7.1")

# Register the custom P2996 clang toolchain
register_toolchains("//toolchain:p2996_toolchain")
